<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>runtime</artifactId>
    <groupId>org.assimbly</groupId>
    <version>5.1.0</version>
  </parent>

  <name>integration-rest</name>
  <packaging>jar</packaging>

  <artifactId>integration-rest</artifactId>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.versions.rules>file:///${project.basedir}/../rules.xml</maven.versions.rules>
  </properties>

  <distributionManagement> 
        <repository>
            <id>github</id> 
            <name>Temporary Staging Repository</name> 
            <url>https://maven.pkg.github.com/assimbly/runtime</url> 
        </repository> 
    </distributionManagement>

  <dependencies>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>integration</artifactId>
		  <version>${assimbly.version}</version>
	  </dependency>

	  <dependency>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-starter-webmvc</artifactId>
		  <version>4.0.3</version>
	  </dependency>

	  <!-- tests -->
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>commons</artifactId>
		  <version>${assimbly.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.testcontainers</groupId>
		  <artifactId>testcontainers</artifactId>
		  <version>${testcontainers.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.testcontainers</groupId>
		  <artifactId>testcontainers-mongodb</artifactId>
		  <version>2.0.3</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.mongodb</groupId>
		  <artifactId>mongodb-driver-sync</artifactId>
		  <version>${mongo.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.mongodb</groupId>
		  <artifactId>mongodb-driver-core</artifactId>
		  <version>${mongo.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>com.warrenstrange</groupId>
		  <artifactId>googleauth</artifactId>
		  <version>${googleauth.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.assertj</groupId>
		  <artifactId>assertj-core</artifactId>
		  <version>${assertj.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>net.javacrumbs.json-unit</groupId>
		  <artifactId>json-unit-assertj</artifactId>
		  <version>${json-unit-assertj.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.junit.jupiter</groupId>
		  <artifactId>junit-jupiter-api</artifactId>
		  <version>${junit.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.junit.jupiter</groupId>
		  <artifactId>junit-jupiter-engine</artifactId>
		  <version>${junit.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-starter-test</artifactId>
		  <version>${spring-boot.version}</version>
		  <exclusions>
			  <exclusion>
				  <groupId>com.vaadin.external.google</groupId>
				  <artifactId>android-json</artifactId>
			  </exclusion>
		  </exclusions>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-starter-data-jpa</artifactId>
		  <version>${spring-boot.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>com.h2database</groupId>
		  <artifactId>h2</artifactId>
		  <version>${h2database.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.hamcrest</groupId>
		  <artifactId>hamcrest</artifactId>
		  <version>${hamcrest.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.maven</groupId>
		  <artifactId>maven-model</artifactId>
		  <version>${maven-api.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.maven</groupId>
		  <artifactId>maven-model-builder</artifactId>
		  <version>${maven-api.version}</version>
		  <scope>test</scope>
	  </dependency>

  </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
						<configuration>
							<toolchains>
								<jdk>
									<version>21</version>
								</jdk>
							</toolchains>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
